[package]
name = "kleur"
version = "0.1.0"
authors = ["Kevin de Berk <kevin.deberk@messagebird.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error-chain = "0.12.2"
regex = "1.3.5"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
os_pipe = "0.9"
